# hse_psb_hackathon

./: .pre-commit-config.yaml  README.md  pyproject.toml  top_1_autogluon.ipynb  top_2_catboost_kfold.ipynb  top_3_boostings_blending.ipynb
data/: example.csv  test_correct.csv
hse_psb_hackathon/: optuna_boostings.py  trash.py
hse_psb_hackathon/notebooks/: autogluon_high_quality_try.ipynb  catbost_x5_folds_new_features_early_stopping.csv.ipynb  cleaning_and_new_features.ipynb  current_main.ipynb  default_catboost.ipynb  eda.ipynb  eda_part_2.ipynb  full_catboost_without_validation.ipynb  latest_current.ipynb  new_data.ipynb  team_send.ipynb  top_cancel_features_MOST_LATEST.ipynb  weather_features.ipynb
submissions/: 15topfeatures_catboost.csv  30x_catboost_no_feature_cleaning_plus_extra_features.csv  4x_blending.csv  autogluon_on_processed_data.csv  autogluon_on_processed_data_2.csv  catboost_10x_kfold.csv  catboost_first_class_99_rounded.csv  catboost_no_feature_cleaning_plus_extra_features.csv  catboost_only_binary.csv  catboost_rounded_XD.csv  catboost_rounded_XD_1.csv  catboost_rounded_XD_2.csv  catboost_rounded_XD_3.csv  catboost_trained_on_test.csv  catboost_trained_on_test_no_feature_cleaning.csv  catboost_with_weather_2.csv  catboost_with_weather_3_with_diff.csv  catbost....csv  catbost_x10_folds_new_features_early_stopping.csv  catbost_x10_randomised_search_no_groups.csv  catbost_x5_best_fold.csv  catbost_x5_folds_new_features_early_stopping.csv  catbost_x5_groupbyfeatures+yulia_features.csv  catbost_x5_groupbyfeatures.csv  catbost_x5_randomised_search.csv  default_catboost.csv  default_catboost_with_new_features.csv  default_catboost_with_new_features_reversed.csv  random_forest_try.csv  single_catboost_on_full_data.csv
