[project]
name = "hse-psb-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "autogluon>=1.1.1",
    "catboost>=1.1.1",
    "ipywidgets",
    "jupyterlab",
    "lightgbm>=4.3.0",
    "matplotlib",
    "numpy",
    "openpyxl>=3.1.5",
    "optuna>=4.0.0",
    "pandas",
    "scikit-learn>=1.4.0",
    "seaborn>=0.13.2",
    "tqdm>=4.66.5",
    "xgboost>=2.0.3",
]

[tool.uv]
dev-dependencies = [
    "black",
    "deptry",
    "flake8",
    "flake8-bugbear",
    "flake8-pyproject",
    "flake8-simplify",
    "isort",
    "mypy",
    "nbqa[toolchain]",
    "pandas-stubs",
    "pre-commit",
    "pylint",
    "ruff",
    "types-beautifulsoup4",
    "types-colorama",
    "types-decorator",
    "types-jsonschema",
    "types-openpyxl",
    "types-pillow",
    "types-protobuf",
    "types-psutil",
    "types-pygments",
    "types-pyyaml",
    "types-regex",
    "types-requests",
    "types-seaborn",
    "types-setuptools",
    "types-six",
    "types-tabulate",
    "types-tqdm",
    "typing-extensions",
]

[tool.black]
line-length = 90
target-version = ["py39"]
# skip-magic-trailing-comma = true

[tool.isort]
profile = "black"
line_length = 90
float_to_top = true
known_third_party = ["wandb"]

[tool.autoflake]
expand-star-imports = true
remove-all-unused-imports = true
ignore-init-module-imports = true
remove-duplicate-keys = true
remove-unused-variables = true
recursive = true
in-place = true

[tool.flake8]
max-line-length = 90
extend-ignore = ["E203"] # Whitespace before ':' for black compatability

[tool.pylint]
py-version = "3.9"
max-line-length = 90
disable = [
  "C0116", # documentation
  "C0114", # documentation
  "C0115", # documentation
]

[tool.mypy]
python_version = "3.9"
strict = false            # it's too strict to be useful
show_error_context = true
pretty = true
# ignore_missing_imports = true # ignore packages without type-checking

[tool.ruff]
target-version = "py39"
line-length = 90

lint.select = ["ALL"]
lint.ignore = [
  "ANN101",  # annotationg self in class methods, will be deprecated
  "ANN102",  # annotationg cls in class methods, will be deprecated
  "COM812",  # missing-trailing-comma
  "D",       # documentation
  "FA100",   # future-annotations
  "NPY002",  # numpy random stuff
  "PLR0913", # too many init arguments
  "RUF012",  # mutable class attributes type checking
  "T201",    # print statements
]
